# algo_trading

./: CMakeLists.txt  README.md
include/: pairs_trading_strategy.hpp
src/: pairs_trading_strategy.cpp
